# malstruct

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  VERSION  pyproject.toml  requirements.txt  setup.py  version-increment
.github/workflows/: main.yml
deprecated_gallery/: bmp.py  cap.py  elf32.py  emf.py  ext2.py  fat16.py  gif.py  ipstack.py  mbr.py  pe32.py  png.py  snoop.py  wmf.py
docs/: adapters.rst  advanced.rst  basics.rst  conf.py  debugging.rst  extending.rst  index.rst  intro.rst  lazy.rst  meta.rst  misc.rst  streaming.rst  transition210.rst  transition29.rst  tunneling.rst
docs/api/: abstract.rst  adapters.rst  align.rst  bytes.rst  conditional.rst  core.rst  debugging.rst  exceptions.rst  lazy.rst  lib.rst  malstruct.binaryfiles.rst  malstruct.lib.rst  malstruct.rst  malstruct.windows.rst  mappings.rst  misc.rst  modules.rst  numerics.rst  pecon.rst  repeaters.rst  special.rst  streaming.rst  strings.rst  structs.rst  tunneling.rst
gallery/: elf.py  pe32coff.py  ut_index.py
malstruct/: __init__.py  core.py  debug.py  version.py
malstruct/lib/: __init__.py  binary.py  containers.py  hex.py  py3compat.py
malstruct/utils/: __init__.py  arm.py  custombase64.py  datetime_.py  dotnet.py  helpers.py  html.py  machoutils.py  mips.py  network.py  pecon.py  windows_enums.py  windows_structures.py
src/malstruct/: __init__.py  adapters.py  alignment.py  analysis.py  bytes_.py  conditional.py  core.py  debug.py  exceptions.py  expr.py  helpers.py  html.py  integers.py  lazy.py  mappings.py  miscellaneous.py  network.py  stream.py  strings.py  template.html  transforms.py
src/malstruct/binaryfiles/: __init__.py  dotnet.py  elfutils.py  machoutils.py  peutils.py
src/malstruct/lib/: __init__.py  binary.py  bitstream.py  containers.py  custombase64.py  hexd.py
src/malstruct/windows/: __init__.py  constants.py  enums.py  structures.py
src/pecon/: __init__.py  pecon.py
tests/: conftest.py  declarativeunittest.py  test_analysis.py  test_benchmarks.py  test_binaryfiles.py  test_compiler.py  test_core.py  test_dotnet.py  test_expr.py  test_helpers.py  test_integers.py  test_mappings.py  test_miscellaneous.py  test_multiprocessing.py  test_network.py  test_strings.py  test_transforms.py  test_windows.py
tests/deprecated_gallery/: test_formats.py  test_protocols.py
tests/gallery/: test_gallery.py
tests/kaitai_comparisons/: comparison_1_construct.py
tests/lib/: test_binary.py  test_bitstream.py  test_containers_dict.py  test_containers_list.py  test_hex.py  test_py3compat.py  test_search.py
tests/samples/: hello.elf
