[build-system]
requires = ["setuptools >= 80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "malstruct"
authors = [
    {name = "Cipher Tech Solutions, Inc", email = "opensource@ciphertechsolutions.com"}
]
maintainers = [
    {name = "Cipher Tech Solutions, Inc", email = "opensource@ciphertechsolutions.com"}
]
dynamic = ["version", "readme"]
description = "A powerful declarative symmetric parser/builder for binary data"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "arrow>=1.4.0",
    "cloudpickle>=3.1.2",
    "lz4>=4.4.5",
    "cryptography>=46.0.7",
    "pyelftools",
    "jinja2",
    "pefile>=2019.4.18",
    "lief",
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "malstruct",
    "construct",
    "kaitai",
    "declarative",
    "data structure",
    "struct",
    "binary",
    "symmetric",
    "parser",
    "builder",
    "parsing",
    "building",
    "pack",
    "unpack",
    "packer",
    "unpacker",
]

[project.urls]
Homepage = "https://ciphertechsolutions.github.io/malstruct/"
Source = "https://github.com/ciphertechsolutions/malstruct"
Documentation = "https://ciphertechsolutions.github.io/malstruct/"
Issues = "https://github.com/ciphertechsolutions/malstruct/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov"
]
build = [
    "setuptools",
    "build",
    "twine"
]
docs = [
    "sphinx"
]

[tool.pytest.ini_options]
minversion = "3.10"
testpaths = ["tests"]
addopts = "--benchmark-disable --showlocals --verbose --junitxml=junit.xml --cov-report=xml:coverage.xml --cov-report=term-missing"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = ["README.rst", "CHANGELOG.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pecon", "malstruct", "malstruct.lib", "malstruct.binaryfiles", "malstruct.windows"]
exclude = ["wheels"]
